  * apt-pkg/contrib/fileutl.cc:
    - remove _POSIX_SYNCHRONIZED_IO guard in FileFd::Sync() around fsync
      as this guard is only needed for fdatasync and not defined on hurd
  * cmdline/apt-get.cc:
    - error out on (unsatisfiable) build-deps on purly virtual packages
      instead of ignoring these dependencies; thanks to Johannes Schauer
      for the detailed report! (Closes: #683786)
  * doc/apt-verbatim.ent:
    - denote 'wheezy' as stable codename and 'jessie' as testing codename
      in the documentation in preparation for release

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 18 Jul 2012 11:45:57 +0200

apt (0.9.7.3) UNRELEASED; urgency=low

  [ Manpages translation updates ]
  * Spanish; (Omar Campagne). Closes: #681566

  [ Program translation updates ]
  * Czech (Miroslav Kure). Closes: #680758

  [ David Kalnischkies ]
  * apt-pkg/cacheset.cc:
    - handle :all and :native correctly as architectures again
      in the commandline parsing (regression in 0.9.7)
  * apt-pkg/packagemanager.cc:
    - do not segfault if nothing can be configured to statisfy
      a pre-depends (e.g. in a pre-depends loop) (Closes: #681958)
  * apt-pkg/contrib/mmap.cc:
    - trigger the usage of the fallback code for kfreebsd also in the
      second (filebased) constructor of DynamicMMap (Closes: #677704)
    - refer to APT::Cache-Start in case the growing failed as if -Limit is
      really the offender it will be noted in a previous error message.
    - for filesystems not supporting mmap'ing a file we need to use a
      SyncToFd dummy just as we did for compressed files in 0.9.5

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 18 Jul 2012 11:45:57 +0200

apt (0.9.7.2) unstable; urgency=low

  [ Manpages translation updates ]
  * French (Christian Perrier)
  * German (Chris Leick)

  [ Program translation updates ]
  * Greek (Θανάσης Νάτσης)
  * Japanese (Kenshi Muto) (Closes: #679662)
  * Russian (Yuri Kozlov) (Closes: #679599)